--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "bluebird": "^3.7.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-ejs-extend": "0.0.1",
     "mongoose": "^5.12.2"
   },
   "devDependencies": {
