--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-ejs-extend": "0.0.1",
+    "express-validator": "^6.10.0",
     "mongoose": "^5.12.2"
   },
   "devDependencies": {
