--- a/server/package.json
+++ b/server/package.json
@@ -11,17 +11,22 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.4.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-ejs-extend": "0.0.1",
+    "express-session": "^1.17.1",
     "express-validator": "^6.10.0",
     "mongoose": "^5.12.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.14",
+    "@babel/node": "^7.13.13",
+    "@babel/preset-env": "^7.13.12",
     "nodemon": "^2.0.7"
   }
 }
