--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "express-ejs-extend": "0.0.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.10.0",
-    "mongoose": "^5.12.2"
+    "mongoose": "^5.12.2",
+    "nodemailer": "^6.5.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
