--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,9 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.10.0",
     "mongoose": "^5.12.2",
-    "nodemailer": "^6.5.0"
+    "nodemailer": "^6.5.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
