--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "mongoose": "^5.12.2",
     "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
