--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.0.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.25.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.4.1",
     "cors": "^2.8.5",
@@ -22,6 +23,8 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.10.0",
     "mongoose": "^5.12.2",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
