--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node src/index.js"
+    "start": "source sh/env.sh && nodemon --exec babel-node src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -31,9 +31,9 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.14",
+    "@babel/cli": "^7.13.16",
     "@babel/core": "^7.13.14",
-    "@babel/node": "^7.13.13",
+    "@babel/node": "^7.14.2",
     "@babel/preset-env": "^7.13.12",
     "nodemon": "^2.0.7"
   }
