--- a/server/.gitignore
+++ b/server/.gitignore
@@ -9,7 +9,7 @@
 /coverage
 
 #sh
-sh/env.sh
+/sh/env.sh
 
 # production
 /build
@@ -24,5 +24,3 @@ sh/env.sh
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# sh/env.sh
