--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "cloudinary": "^1.25.1",
     "cloudinary-react": "^1.7.0",
+    "howler": "^2.2.1",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
     "react": "^17.0.2",
